# cpp_learnings

./: CMakeLists.txt
.cache/clangd/index/: hello_test.cc.D26C0254287D2F85.idx  hello_test.cpp.6A9FBBC189EBF5CC.idx  hello_test.cpp.6B10799FA1337F9B.idx  hello_test.cpp.82D4F79D3CF21859.idx  main.cpp.1E0BAABF62CB0C64.idx  main.cpp.63AC966B2417D105.idx  square.cpp.24C51A877B7AA56D.idx  square.cpp.A775C3020D2ABAD6.idx  square.h.A17B121CE7F37409.idx  square.h.B3979537C40C66F2.idx  square_test.cpp.D1E418A29E239C55.idx
src/: CMakeLists.txt  main.cpp  square.cpp  square.h
tests/: CMakeLists.txt  hello_test.cpp  square_test.cpp
